[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
pytest = "{{ cookiecutter.pytest_version }}"
black = "{{ cookiecutter.black_version }}"
flake8 = "{{ cookiecutter.flake8_version }}"
flake8-isort = "{{ cookiecutter.flake8_isort_version }}"
flake8-docstrings = "{{ cookiecutter.flake8_docstrings_version }}"
pre-commit = "{{ cookiecutter.pre_commit_version }}"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
